conversion from bin to mat almost done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,33 @@
-#set the minimum version for cmake
 cmake_minimum_required(VERSION 3.17.0)
 set(CMAKE_CXX_STANDARD 17)
 
-#name of the project
 project(libiq)
 
-#include pybind11 in my configuration
 add_subdirectory(pybind11)
-#include SigMF in my configuration
 add_subdirectory(SigMF)
 
-#pybind11 function to crate Python modules extended in C++, 
-#first parameter is the name of the Python module
-#second one is the source code of the Python module
-pybind11_add_module(libiq main.cpp)
+set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/root/.pyenv/versions/3.9-dev")
+set(Python3_DIR "/root/.pyenv/versions/3.9-dev/lib/cmake/python3.9")
 
-#The add_library command in CMake is used to create a library from a set of source files. More than one can be specified.
-#In this case, it's creating a static library named 'converter' from the source file 'src/converter.cpp'.
-#A static library is a library that is linked at compile-time, and it's included as part of the final executable.
-add_library(converter STATIC src/from_bin_to_sigmf.cpp)
+set(Python_INCLUDE_DIRS "/root/.pyenv/versions/3.9-dev/include/python3.9")
+find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+include_directories(${Python_INCLUDE_DIRS})
 
-#This means that the 'converter' target will be compiled with Position Independent Code (PIC).
-#PIC is used for shared libraries, which can be loaded at different memory addresses in different runs without needing to be relinked.
-#This increases the security and flexibility of the shared library.
-set_target_properties(converter PROPERTIES POSITION_INDEPENDENT_CODE ON)
+pybind11_add_module(libiq main.cpp src/from_bin_to_sigmf.cpp)
+#pybind11_add_module(iq_sample_converter src/from_bin_to_sigmf.cpp)
 
-#It's defining 'VERSION_INFO' as "0.0.1" for the 'libiq' target.
-#Compile definitions are similar to '#define' directives in C++. They are replaced by their corresponding value at the start of the compilation process.
-#So, whenever 'VERSION_INFO' appears in the source code for 'libiq', it will be replaced with "0.0.1".
+#target_include_directories(iq_sample_converter PRIVATE ${Python_INCLUDE_DIRS})
+#include_directories(iq_sample_converter PRIVATE pybind11/include)
+target_include_directories(libiq PRIVATE ${Python_INCLUDE_DIRS})
+include_directories(libiq PRIVATE pybind11/include)
+
+#add_library(iq_sample_converter STATIC src/from_bin_to_sigmf.cpp)
+
+#set_target_properties(iq_sample_converter PROPERTIES POSITION_INDEPENDENT_CODE ON)
+set_target_properties(libiq PROPERTIES POSITION_INDEPENDENT_CODE ON)
+
 target_compile_definitions(libiq PRIVATE VERSION_INFO="0.0.1")
 
-#It's linking the 'converter' library to the 'libiq' target.
-#This means that when 'libiq' is compiled, the compiler will include code from the 'converter' library.
-#The 'PRIVATE' keyword in this context means that the 'converter' library is linked only to 'libiq', and will not be linked to any other targets that might depend on 'libiq'.
-target_link_libraries(libiq PRIVATE converter libsigmf)
+#target_link_libraries(libiq PRIVATE iq_sample_converter libsigmf)
+target_link_libraries(libiq PRIVATE libsigmf Python3::Python)
+#target_link_libraries(iq_sample_converter PRIVATE Python3::Python)
