added conversion from bin to mat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 project(libiq)
 
 add_subdirectory(pybind11)
-add_subdirectory(SigMF)
+add_subdirectory(libsigmf)
 
 set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/root/.pyenv/versions/3.9-dev")
 set(Python3_DIR "/root/.pyenv/versions/3.9-dev/lib/cmake/python3.9")
@@ -13,7 +13,7 @@ set(Python_INCLUDE_DIRS "/root/.pyenv/versions/3.9-dev/include/python3.9")
 find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
 include_directories(${Python_INCLUDE_DIRS})
 
-pybind11_add_module(libiq main.cpp src/from_bin_to_sigmf.cpp)
+pybind11_add_module(libiq main.cpp src/converter.cpp)
 #pybind11_add_module(iq_sample_converter src/from_bin_to_sigmf.cpp)
 
 #target_include_directories(iq_sample_converter PRIVATE ${Python_INCLUDE_DIRS})
