First public release (#3)
* merge of iq_clustering into libiq

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* added installation script

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* added trained model for cnn

* added int16 support

* added cnn testing for dapp

* cnn integration

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* improved cnn for OAI captures

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* fixed cnn test for dapp and new model trained

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* created class Classification for cnn

* Created Classification class for CNN

* changed class name

* label changed

* new trained model

* fixed confusion matrix labels

* trained model

* trained cnn with triangular and sqaure signals and added plot of loss curve

* changed path best_model

* simplified and optimized overall code

* trained new model with input size * 15

* code improvement and reshaping

* added energy detector for dApp demo

Co-authored-by: Filippo Olimpieri <olimpieri.1933529@studenti.uniroma1.it>

* improve speed of cnn prediction

* Adding documentation and extending classifier class

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* Adding example scripts and fixing code

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* Changed the code to work with hatch

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* Updated README and installation script

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* Updated README

Co-authored-by: Noemi Giustini <giustini.1933541@studenti.uniroma1.it>

* Add HDF5 submodule

* Update README.md

* Update README.md

* Update libiq_installer.sh

* Update README.md

* Update README.md

* updated pyproject.toml added full license nd deleted usefull files

Co-authored-by: Noemi Giustini <giustini.19

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
-/libiq_build
-
-/src/libiq_wrap.cxx
+*libiq_wrap.cxx
 
 **/__pycache__/
 **/_libiq.cpython*
-**/libiq.py
-**/iq_samples/
 
-/examples/iq_samples_fourier
-/examples/iq_samples_sigmf
-/examples/iq_samples_mat
-/examples/iq_samples/*
+src/libiq.egg-info
+*libiq_wrapped_wrap.cpp
+src/libiq/_libiqwrapped.cpython-3*-x86_64-linux-gnu.so
+src/libiq/libiqwrapped.py
 
-/examples/demo/iq_samples/*
+examples/test_results/*
+dist/*
+docs/sample_data/test_results/*
