--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include README.md
 include LICENSE
 include setup.py
 include pyproject.toml
+include CITATION.cff
 
 recursive-include src/libiq_swig *.h *.i
