--- a/.github/workflows/tag-and-release.yml
+++ b/.github/workflows/tag-and-release.yml
@@ -54,23 +54,39 @@ jobs:
           echo "version=${{ steps.get_version.outputs.version }}" >> $GITHUB_OUTPUT
 
   build:
-    name: Build distribution 📦
+    name: Build manylinux distribution 📦
     runs-on: ubuntu-latest
     needs: create-tag
     if: ${{ needs.create-tag.outputs.tag_created == 'true' && github.repository == 'wineslab/lib-iq' }}
+
     steps:
-      - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Install pypa/build hatch
-        run: python3 -m pip install build hatch --user
-      - name: Build a binary wheel and a source tarball
-        run: ./build.sh
-      - name: Store the distribution packages
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Pull manylinux image
+        run: docker pull quay.io/pypa/manylinux_2_28_x86_64
+
+      - name: Build and repair wheel inside manylinux container
+        run: |
+          docker run --rm \
+            -v ${{ github.workspace }}:/libiq \
+            -w /libiq \
+            quay.io/pypa/manylinux_2_28_x86_64 \
+            /bin/bash -c "
+              yum install -y git wget graphviz swig make automake gcc gcc-c++ libtool &&
+              export PATH=\"/opt/python/cp310-cp310/bin:\$PATH\" &&
+              python3 -m pip install --upgrade pip setuptools wheel hatch &&
+              bash build.sh &&
+              auditwheel repair dist/*.whl -w repaired_wheels
+            "
+
+      - name: Clean original .whl and move repaired wheel to dist/
+        run: |
+          mkdir -p dist
+          rm dist/libiq-*.whl
+          cp repaired_wheels/*.whl dist/
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: python-package-distributions
